cocogen/tests/pass/phase.ccn

start phase hello {
    actions {
        pass p;
        phase1;
    }
};

root node ast {
    children {
        tmp n,
        ast next,
        newest haha
    }
};

node tmp {
    attributes {
        int val
    }
};

node newest {
    attributes {
        int val
    }
};

nodeset x = {ast} | {ast};
nodeset y = x | {ast};
nodeset z = y | { tmp };
nodeset b = z & {tmp} & y;
nodeset g = {tmp};

traversal all {
    uid = a,

    nodes = {newest},
    
    travdata {
        int fill
    }
};

traversal help {
    uid = h,
    nodes = x
};


phase phase1 {
    actions {
        pass doSomething;
    } 
};
